// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list changes considering parents adds changes for dependency 1`] = `
Object {
  "changes": Object {
    "changes": undefined,
    "releases": Object {
      "all": Object {
        "dependencies": undefined,
        "manager": "javascript",
        "parents": Array [
          "yarn-workspace-base-pkg-a",
          "yarn-workspace-base-pkg-b",
        ],
        "path": undefined,
        "pkg": "all",
        "type": "minor",
      },
      "yarn-workspace-base-pkg-a": Object {
        "dependencies": undefined,
        "manager": "javascript",
        "parents": Array [],
        "path": undefined,
        "pkg": "all",
        "type": "minor",
      },
      "yarn-workspace-base-pkg-b": Object {
        "dependencies": undefined,
        "manager": "javascript",
        "parents": Array [
          "yarn-workspace-base-pkg-a",
        ],
        "path": undefined,
        "pkg": "all",
        "type": "minor",
      },
    },
  },
  "consoleDir": Array [],
  "consoleLog": Array [],
}
`;

exports[`list changes considering parents bumps higher due to dependency bump 1`] = `
Object {
  "changes": Object {
    "changes": undefined,
    "releases": Object {
      "all": Object {
        "dependencies": undefined,
        "manager": "javascript",
        "parents": Array [
          "yarn-workspace-base-pkg-a",
          "yarn-workspace-base-pkg-b",
        ],
        "path": undefined,
        "pkg": "all",
        "type": "minor",
      },
      "yarn-workspace-base-pkg-a": Object {
        "dependencies": undefined,
        "manager": "javascript",
        "parents": Array [],
        "path": undefined,
        "pkg": "all",
        "type": "minor",
      },
      "yarn-workspace-base-pkg-b": Object {
        "dependencies": undefined,
        "manager": "javascript",
        "parents": Array [
          "yarn-workspace-base-pkg-a",
        ],
        "path": undefined,
        "pkg": "all",
        "type": "minor",
      },
    },
  },
  "consoleDir": Array [],
  "consoleLog": Array [],
}
`;

exports[`package file apply bump bumps multi js json 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping yarn-workspace-base-pkg-a with minor",
    ],
    Array [
      "bumping yarn-workspace-base-pkg-b with minor",
    ],
  ],
}
`;

exports[`package file apply bump bumps multi rust toml 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping rust_pkg_a_fixture with minor",
    ],
    Array [
      "bumping rust_pkg_b_fixture with minor",
    ],
  ],
}
`;

exports[`package file apply bump bumps multi rust toml as minor with object dep missing patch 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping rust_pkg_a_fixture with minor",
    ],
    Array [
      "bumping rust_pkg_b_fixture with minor",
    ],
  ],
}
`;

exports[`package file apply bump bumps multi rust toml as patch with object dep missing patch 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping rust_pkg_a_fixture with patch",
    ],
    Array [
      "bumping rust_pkg_b_fixture with patch",
    ],
  ],
}
`;

exports[`package file apply bump bumps multi rust toml with dep missing patch 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping rust_pkg_a_fixture with minor",
    ],
    Array [
      "bumping rust_pkg_b_fixture with minor",
    ],
  ],
}
`;

exports[`package file apply bump bumps multi rust toml with object dep 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping rust_pkg_a_fixture with minor",
    ],
    Array [
      "bumping rust_pkg_b_fixture with minor",
    ],
  ],
}
`;

exports[`package file apply bump bumps single js json 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping js-single-json-fixture with minor",
    ],
  ],
}
`;

exports[`package file apply bump bumps single rust toml 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping rust-single-fixture with minor",
    ],
  ],
}
`;
